# disk-wise

./: .gitignore  CLAUDE.md  README.md  diskwise.cabal
app/: Main.hs
docs/: spec.md
docs/spec/: act.md  batch-mode.md  claude-access.md  concepts.md  garden.md  index.md  invariants.md  investigate.md  learn.md  scanner-design.md  session-learning.md  wiki-structure.md
src/DiskWise/: Batch.hs  CLI.hs  Claude.hs  Engine.hs  History.hs  Scanner.hs  Types.hs  Wiki.hs  WikiGist.hs  WikiRouter.hs
test/DiskWise/: ClaudeSpec.hs  EngineSpec.hs  HistorySpec.hs  ScannerSpec.hs  TypesSpec.hs  WikiGistSpec.hs  WikiSpec.hs
